ChangeLog for RQL
=================

2007-02-02  --  0.10.0
    * allow variable as rhs of 'is' relation
    * can use Any as type specification in DELETE queries (eg DELETE Any X)
    * fix type inference when non '=' operator on uid relation

	
2006-11-15  --  0.9.1
    * fix Variable.selected_index()
    * do not raise bad rql query on non selected sorted variable in
      distinct query since this is supported by erudi's rql engine
	
2006-11-14  --  0.9.0
    * proper full/right/left outer join support
    * removed a buggy assertion in stcheck on aggregat function
    * new .selected_index method on Variable
	
2006-10-31  --  0.8.1
    * fix SortTerm implementation
    * fix a NameError in set_offset/set_limit and regenerate parser to
      use those methods
    * stinfo['references'] is now a list since order is important
	
2006-10-27  --  0.8.0
    * fix grammar for negative integer :/
    * simplify generated subtree for IN(onechildren)
    * stcheck is now doing full annotation and additional constant variable
      rewriting
    * do not include yapps anymore
    * removed broken C parser
    * fixes to follow yams api changes
    * editextensions fixes

2006-10-08  --  0.7.2
    * add missing as_string method on groups and sorts
    * detect that queries like "Any C where C suivi_par P, P eid %(x)s ORDERBY N"
      are incorrect (N isn't defined)
	
2006-09-22  --  0.7.1
    * fix as_string bugs
    * fix a bug in stcheck to detect bad queries when aggregat/transform
      functions are used
	
2006-09-05  --  0.7.0
    * new method on variable to get the name of relations where it's used
    * new function into utils to register known registered procedures
    * fixed grammar to allow "_" into function name

2006-06-08  --  0.6.0
    * new add method on statement

2006-05-21  --  0.5.2
    * fixed syntax tree copy, just call stmt.copy() to have a
      full deep copy
    * support for substitute on uid relation in the type analyzer