@@ -1,6 +1,10 @@
 ChangeLog for RQL
 =================
 
+ -- 
+    * fix rewriting bug: variable used in an optional relation can't be
+      rewritten 
+	
 2007-02-02  --  0.10.0
     * allow variable as rhs of 'is' relation
     * can use Any as type specification in DELETE queries (eg DELETE Any X)
